tests/positive/FancyPaths/home/Package.juvix
module Package;

import PackageDescription.V2 open;

package : Package :=
  defaultPackage@{
    name := "home";
    dependencies := [];
  };
