tests/negative/PackageNameConflict/Package.juvix
module Package;

import PackageDescription.V2 open;

package : Package :=
  defaultPackage@{
    name := "packageNameConflict";
    dependencies := [path "dep1"; path "dep2"];
  };
